Adding new product and uploading images to amazon s3 server